# krasis

./: .gitignore  ADVANCED.md  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  DEV.md  EFFICIENCY_REPORT.md  LICENSE  PERFORMANCE_ANALYSIS.md  README.md  RESEARCH.md  STATUS.md  TESTING.md  build.rs  ci_plan.md  dev  install.sh  krasis  krasis-chat  package-lock.json  package.json  perf_diff_20260330_b8c071d_vs_worktree_review.txt  perplexity-considerations.md  profile_results.json  pyproject.toml  qwen235b-4-4.conf  regression.md  run_benchmark.sh  run_v2lite_nan_debug.py  session-bridge.mjs  test_kimi_k25.py  test_v2lite_profile.py
benchmarks/: 20260226-143551-Qwen3-Coder-Next-sanity.txt  20260226-145234-DeepSeek-V2-Lite-sanity.txt  20260226-145535-Qwen3.5-35B-A3B-sanity.txt  20260226-153747-deepseek-vl2-sanity.txt  20260226-154349-deepseek-vl2-sanity.txt  20260226_1153-Qwen3.5-35B-A3B-int4gpu-int4cpu-sanity.txt  20260226_1159-Qwen3.5-35B-A3B-int4gpu-int4cpu-sanity.txt  20260318-105215-Qwen3-Coder-Next-sanity.txt  20260318-110104-Qwen3-Coder-Next-sanity.txt  20260318-110902-Qwen3-Coder-Next-sanity.txt  20260318-111759-Qwen3-Coder-Next-sanity.txt  20260318-112601-Qwen3-Coder-Next-sanity.txt  20260319-094342-Qwen3-Coder-Next-sanity.txt  20260319-095024-Qwen3-Coder-Next-sanity.txt  20260319-095658-Qwen3-Coder-Next-sanity.txt  20260319-100402-Qwen3-Coder-Next-sanity.txt  20260319-101045-Qwen3-Coder-Next-sanity.txt  20260319-103220-Qwen3.5-35B-A3B-sanity.txt  20260319-103838-Qwen3.5-35B-A3B-sanity.txt  20260319-104643-Qwen3.5-35B-A3B-sanity.txt  (+48 more)
src/: chat_template.rs  (+13 more)
(+1002 files in other folders)
