[package]
name = "krasis"
version = "0.1.63-rc6"
edition = "2021"
description = "Hybrid LLM runtime — minimal VRAM, always-on GPU prefill, optimised CPU inference"
license = "SSPL-1.0"

[lib]
name = "krasis"
crate-type = ["cdylib", "rlib"]

[features]
default = ["cuda"]
cuda = ["cudarc"]
gpu-debug = []  # Enable GPU decode debug instrumentation (syncs, peeks, layer capture)

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "multiple-pymethods"] }
memmap2 = "0.9"
safetensors = "0.4"
rayon = "1.10"
half = { version = "2.4", features = ["std", "num-traits"] }
libc = "0.2"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
rand = "0.8"
cudarc = { version = "0.12", features = ["driver", "cublas", "f16", "cuda-12060"], optional = true }
minijinja = "2"

[build-dependencies]
cc = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
